# MINTe

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
docs/: installation_guide.md
examples/: advanced_usage.py  basic_usage.py  batch_experiment.py  prediction_example.py
minte/: __init__.py  api.py  cli.py  config.py  utils.py
minte/data/: __init__.py  dataset.py  module.py
minte/models/: __init__.py  base.py  gru.py  lstm.py
minte/training/: __init__.py  optimizer.py  trainer.py
minte/visualization/: __init__.py  visualizer.py
tests/: conftest.py  test_config.py  test_dataset.py  test_models.py  test_utils.py
